--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,5 +26,8 @@ dependencies {
     })
     compile 'com.android.support:appcompat-v7:25.1.0'
     compile 'com.coolerfall:android-http-download-manager:1.6.1'
+    compile 'com.squareup.okhttp3:okhttp:3.4.1'
+    compile 'com.squareup.okhttp3:logging-interceptor:3.4.1'
+    compile 'pub.devrel:easypermissions:0.2.0'
     testCompile 'junit:junit:4.12'
 }
